--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@astrojs/react": "^1.1.1",
-    "astro": "^1.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@astrojs/tailwind": "^3.1.2",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
-    "sass": "^1.54.9"
+    "astro": "^2.4.1",
+    "sass": "^1.54.9",
+    "tailwindcss": "^3.3.2"
   }
 }
