--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fontsource/lato": "^4.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-feather": "^2.0.10"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^3.1.2",
